# deimos-autonomy

./: .gitignore  README.md
docs/: AUTONOMY_PROPOSAL.md  BUILD_VERIFICATION.md  COMPETITION_RUNBOOK.md
docs/inference_samples/: README.md
scripts/: build_yolo_trt.sh  download_mdrs_dem.sh  train_yolo_urc.py  urc_waypoints.yaml.example
src/deimos_autonomy/: package.xml  setup.py
src/deimos_autonomy/config/: ekf_global.yaml  ekf_local.yaml  fast_lio_ouster.yaml  nav2_bt_navigate.xml  nav2_params.yaml  navsat_transform.yaml  slam_toolbox_2d.yaml
src/deimos_autonomy/deimos_autonomy/: __init__.py  aruco_action_server.py  dem_global_planner.py  goal_sequencer.py  yolo_trt_node.py
src/deimos_autonomy/launch/: autonomy.launch.py  ekf.launch.py  fast_lio.launch.py  nav2.launch.py  slam_toolbox_2d.launch.py
