<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deimos_autonomy</name>
  <version>0.1.0</version>
  <description>
    Autonomy stack for Space Concordia DEIMOS rover.
    FAST-LIO2 + robot_localization dual-EKF + Nav2 + USGS DEM global planner +
    ArUco final-approach action server + YOLOv8 TRT object detection.
    Dual compute profiles: Orin NX 16GB (primary) / Orin Nano 8GB (fallback).
  </description>
  <maintainer email="pyloxsystems@gmail.com">Emilio Girard</maintainer>
  <license>PolyForm-Noncommercial-1.0.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>aruco_opencv</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
